BE - fix security hotspots, code smells less than 120