@@ -5,10 +5,11 @@ import com.puzzlesolverappbackend.puzzlesolverapp.nonogram.helper.log.loggenerat
 import lombok.experimental.UtilityClass;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @UtilityClass
 public class MarkAvailableFieldsLogHelper {
+
+    private static final String LIST_STRING_FORMAT = "    List.of(%s),%n";
 
     public static String generateLog(
             int index,
@@ -49,7 +50,7 @@ public class MarkAvailableFieldsLogHelper {
 
         List<String> fieldState = isRow
                 ? logic.getNonogramSolutionBoard().get(index)
-                : logic.getNonogramSolutionBoard().stream().map(row -> row.get(index)).collect(Collectors.toList());
+                : logic.getNonogramSolutionBoard().stream().map(row -> row.get(index)).toList();
 
         List<List<Integer>> ranges = isRow
                 ? logic.getRowsSequencesRanges().get(index)
@@ -61,10 +62,10 @@ public class MarkAvailableFieldsLogHelper {
 
         return String.format(
                 "Arguments.of(\"%s / %dx%d / %s / %s %d - seq %d\",%n" +
-                        "    List.of(%s),%n" +
-                        "    List.of(%s),%n" +
-                        "    List.of(%s),%n" +
-                        "    List.of(%s),%n" +
+                        LIST_STRING_FORMAT +
+                        LIST_STRING_FORMAT +
+                        LIST_STRING_FORMAT +
+                        LIST_STRING_FORMAT +
                         "    List.of(%s))",
                 fileName,
                 logic.getNonogramRules().getWidth(),
